styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/*our customers say section*/
:root {
 scroll-behavior:smooth; 
 text-decoration: none;
 --header-color: #f1c324;
 --p-color: #fff;
}

.our-customers-say {
    background-color: black;
    font-family: Roboto, sans-serif;
    font-size: 17px;
    font-weight: 400;
    padding-top: 140px;
    padding-bottom: 70px;

}

.our-customers-say p {
    color: var(--p-color);
    padding: 25px 25px;
    margin: 0 25px;
}

.our-customers-say h2 {
    color: var(--header-color);
    font-family: Dosis, sans-serif;
    font-size: 48px;
    font-weight: 700;
    padding-bottom: 25px;
}
.our-customers-say .dots {
    width: 40px; 
    border-top: 6px dotted rgb(255, 255, 255);
    margin: auto;
}
.our-customers-say p.customer-name {
    color: var(--header-color);
    font-family: Dosis, sans-serif;
    font-size: 25px;
    font-weight: 700;
}

.our-customers-say div.card-container {
    display: flex;
    margin: 0 120px;
    padding: 0 15px;

}

.our-customers-say .text {
    background-color: rgba(255, 255, 255, 0.07);
    text-align: center;
}

.customer-say-img {
    display: block;
    width: 100%;

}

/* contacts section */
.contacts {
    background-color: black;
    display: flex;
    padding-top: 50px;
    margin: auto;
}

.contacts .text {
    margin-left: 120px; 
    background-color: rgba(255, 255, 255, 0.09);
    padding: 50px 50px 50px 50px;
    max-height: 400px;
   
}

.contacts h2 {
    color: var(--header-color);
    font-family: Dosis, sans-serif;
    font-size: 48px;
    font-weight: 700;
    padding-bottom: 20px;
}
.contacts .dots {
    width: 40px; 
    border-top: 6px dotted rgb(255, 255, 255);
    padding-bottom: 20px;
    text-align: left;
}
.contacts h3 {
    color: var(--header-color);
    font-family: Dosis, sans-serif;
    font-size: 20px;
    font-weight: 700;

}

.contacts td {
    color:#9e8f8f;
    font-size: 17px;
    font-family: Roboto, sans-serif;
    padding: 20px 20px 20px 20px;
}

.contacts p {
    color:var(--p-color);
    font-size: 20px;
    padding: 0px 25px 25px 0px;
    text-align: left; 
}

.contacts img {
    display: block;
    width: 100%; 

}

/* footer page 1 */
footer {
    background-color: rgb(247, 249, 251);
    
}
footer div.logo {
    display: block;
    background-color: transparent;
    margin: auto;
    text-align: center;

}

footer p {
    color: #141414;
    font-family: Roboto, sans-serif;
    font-size: 15px;
    font-weight: 400;
    text-align: center;
    margin-top: 30px;
}

footer .inner-container {
    padding: 120px 120px 120px 0px; 
}
footer .jump-links {
    text-decoration: none;
    text-align: center;
    padding: 20px 20px 20px 20px;
   
}

footer .jump-links a {
    text-decoration: none;
    text-align: center;
    padding: 20px 10px 10px 20px;
    color: #141414;
    font-size: 17px;
    font-weight: 600;

}


footer .rights-reserved {
    display: flex;
    justify-content: center;
    padding: 15px 15px;
    font-size: 16px;

}

footer .rights-reserved .p1{
    padding: 0 10px;
}

footer .rights-reserved .p2{
    padding: 0 10px;
}

footer .footer-img {
    display: block;
    width: 100%;
}

footer .social-links {
    display: flex;
    justify-content: center;
    margin-top: 30px;
}

footer .social-links img {
    width: 50px;
    height: 50px;
    border-radius: 50%;

}

/* our tours section */
.block-our-tours, .block-want-to-see-real-africa {
    background-color: black;
}

.our-tours-carousel {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

div.block-our-tours div{
    padding: 10px;
}

div.block-our-tours div a {
    display: block;
    margin: 20px 0 20px 0;
    width: fit-content;
}

div.block-our-tours div a:hover {
    color: black;
    font-size: 10.8px;
    font-family: Roboto;
    font-weight: 700;
    text-transform: uppercase;
    border-width: 1px;
    border-color: rgb(255, 255, 255);
    border-style: solid;
    padding: 15px 17px 15px 17px;
    background-color: rgb(255, 255, 255);
    text-decoration: none;
    display: block;
    margin: 20px 0 20px 0;
    width: fit-content;
}

h2#tours {
    display: block;
    font-size: 41px;
    color: #f1c324;
    font-family: Dosis;
    text-align: center;
 }

.block-our-tours h3 {
    color: rgb(255, 255, 255);
    font-size: 23px;
    font-family: Dosis;
}

.block-our-tours p {
    color: rgb(110, 110, 110);
    font-size: 17px;
    font-family: Roboto;
}

.block-our-tours p.our-tours-bold {
    color: rgb(110, 110, 110);
    font-size: 17px;
    font-family: Roboto;
    font-weight: 700;
}

.block-our-tours span {
    color: rgb(241, 195, 36);
    font-size: 17px;
    font-family: Roboto;
    font-weight: 700;
}

.block-our-tours a {
    color: rgb(255, 255, 255);
    font-size: 10.8px;
    font-family: Roboto;
    font-weight: 700;
    text-transform: uppercase;
    border-width: 1px;
    border-color: rgb(255, 255, 255);
    border-style: solid;
    margin: 15px;
    padding: 15px 17px 15px 17px;

}
/* our tours section */
/* real africa section */
div.block-want-to-see-real-africa{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    max-width: 1400px;
}
/* V. added code here*/
.block-want-to-see-real-africa .image-tiger {
    max-width: 100%;
    display: block;
}
.contact-form-want-to-see-real-africa{
    background-color: rgb(255, 255, 255);
    padding: 40px;
}

#want-to-see-real-africa {
    font-size: 32px;
    color: rgb(241, 195, 36);
    font-family: Dosis;
}

.сontent-want-to-see-real-africa p {
    color: rgb(110, 110, 110);
    font-size: 19px;
    font-family: Roboto;
    font-weight: 500;
}

.contact-form-want-to-see-real-africa div{
    padding: 19px 21px 19px 21px;
    background-color: rgba(255, 255, 255, 0.1);
    
}

.contact-form-want-to-see-real-africa [placeholder]{
    color: rgb(255, 255, 255);
    font-size: 12px;
    font-family: Roboto;
    font-weight: 400;
}

.contact-form-want-to-see-real-africa button{
    color: rgb(255, 255, 255);
    font-size: 12px;
    font-family: Roboto;
    font-weight: 700;
    background-color: rgb(241, 195, 36);
    text-transform: uppercase;
    padding: 19px 21px 19px 21px;
}
/* real africa section */
/* additional services */
.block-additional-services{
    background-image: url(../img/img-additional-services/add-services-background-texture.png)
}

.block-additional-services-container{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#services{
    color: rgb(20, 20, 20);
    font-family: Dosis;
    font-size: 41px;
    font-weight: 700;
}

.additional-services-list{
    color: rgb(20, 20, 20);
    font-family: Dosis;
    font-size: 23px;
    font-weight: 700;
}

.additional-services-list-description{
    color: rgb(110, 110, 110);
    font-family: Roboto;
    font-size: 17px;
    font-weight: 400;
}
/* additional services */

